Import of RKITOVER/Dist-Zilla-MintingProfile-Author-Caelum-0.02 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-Author-Caelum
gitpan-cpan-version:      0.02
gitpan-cpan-path:         RKITOVER/Dist-Zilla-MintingProfile-Author-Caelum-0.02.tar.gz
gitpan-cpan-author:       RKITOVER
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -4,6 +4,11 @@ NAME
 
 SYNOPSIS
         dzil new -P Author::Caelum Your::Dist::Name
+        cd Your-Dist-Name
+        # crate new github repo
+        git init
+        git remote add origin git@github.com:username/your-dist-name.git
+        git add * .gitignore
 
 DESCRIPTION
     This is a general purpose minting profile for
