--- a/README
+++ b/README
@@ -3,19 +3,32 @@ NAME
     @AVAR
 
 SYNOPSIS
+        dzil setup
+
+        git config --global github.user GitHubLoginName
+        git config --global github.password GitHubPassword
+
         dzil new -P Author::Caelum Your::Dist::Name
+
         cd Your-Dist-Name
-        # crate new github repo
-        git init
-        git remote add origin git@github.com:username/your-dist-name.git
-        git add * .gitignore
+
+        # edit stuff and commit
+
+        git push origin master -u # -u needed only on first push
+
+        dzil release
 
 DESCRIPTION
     This is a general purpose minting profile for
     Dist::Zilla::PluginBundle::AVAR.
 
+    It will set up a git repo for you with some boilerplate and prompt you
+    if you want to create a new GitHub repo for it.
+
 SEE ALSO
     *   Dist::Zilla::PluginBundle::AVAR
+
+    *   Dist::Zilla::Plugin::GitHub::Create
 
 AUTHOR
     Rafael Kitover <rkitover@cpan.org>
