Import of RKITOVER/Dist-Zilla-MintingProfile-Author-Caelum-0.05 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-Author-Caelum
gitpan-cpan-version:      0.05
gitpan-cpan-path:         RKITOVER/Dist-Zilla-MintingProfile-Author-Caelum-0.05.tar.gz
gitpan-cpan-author:       RKITOVER
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ NAME
 SYNOPSIS
         dzil setup
 
+        git config --global push.default simple # if you have git >= 1.8
+
         git config --global github.user GitHubLoginName
         git config --global github.password GitHubPassword
 
@@ -14,7 +16,7 @@ SYNOPSIS
 
         # edit stuff and commit
 
-        git push origin master -u # -u needed only on first push
+        git push origin master -u # only for git < 1.8
 
         dzil release
 
