--- a/README
+++ b/README
@@ -23,6 +23,15 @@ DESCRIPTION
     It will set up a git repo for you with some boilerplate and prompt you
     if you want to create a new GitHub repo for it.
 
+    It creates a basic module for you. It does not use any Pod::Weaver
+    stuff.
+
+    It sets up dzil to do all the tagging/versioning/pushing for you (see
+    "@AVAR|Dist::Zilla::PluginBundle::AVAR" for more details.)
+
+    When you do a "dzil release", your module will also be installed with
+    "cpanm ." by default.
+
 SEE ALSO
     *   Dist::Zilla::PluginBundle::AVAR
 
