Import of RKITOVER/Dist-Zilla-MintingProfile-Author-Caelum-0.08 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-Author-Caelum
gitpan-cpan-version:      0.08
gitpan-cpan-path:         RKITOVER/Dist-Zilla-MintingProfile-Author-Caelum-0.08.tar.gz
gitpan-cpan-author:       RKITOVER
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -27,7 +27,7 @@ DESCRIPTION
     stuff.
 
     It sets up dzil to do all the tagging/versioning/pushing for you (see
-    "@AVAR|Dist::Zilla::PluginBundle::AVAR" for more details.)
+    @AVAR for more details.)
 
     When you do a "dzil release", your module will also be installed with
     "cpanm ." by default.
